# study_Rust

bank_project/: Cargo.toml
bank_project/src/: main.rs
bank_project/src/mod_bank/: account.rs  bank_manager.rs  mod.rs
transfer_market/: Cargo.toml
transfer_market/src/: transfer_market_client.rs  transfer_market_server.rs
transfer_market/src/transfer_market_mod/: mod.rs  transfer_market_player.rs
